build/log/idf_py_stderr_output_129155
/home/pi/remoteLED/main/remoteLED.c:285:11: error: redefinition of '_http_event_handler'
  285 | esp_err_t _http_event_handler(esp_http_client_event_t *evt) {
      |           ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:109:11: note: previous definition of '_http_event_handler' with type 'esp_err_t(esp_http_client_event_t *)' {aka 'int(struct esp_http_client_event *)'}
  109 | esp_err_t _http_event_handler(esp_http_client_event_t *evt) {
      |           ^~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
